# octopus-monitoring

./: .env.template  .gitignore  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  CLAUDE.md  Dockerfile  README.md  config.yml.template  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.agent-docs/: agent.md  context.md  grafana-queries.md
.agent-docs/adr/: 0001-mariadb-over-influxdb.md  0002-agile-predict-forecast-dependency.md  0003-90-day-data-retention.md  0004-poetry-to-uv-migration.md  0005-additive-only-schema-sync.md  0006-minimal-env-file-over-config-yml-only.md  0007-background-worker-threads-for-retry-backoff.md  0008-composite-primary-key-for-daily-consumption-summary.md
.agent-docs/issues/: bugfix-consumption-timezone-and-scheduler-backoff.md  bugfix-cost-forecast-current-agreement-range.md  bugfix-rate-fetch-url-encoding.md  bugfix-weekly-yoy-incomplete-weeks.md  chore-additive-schema-sync.md  chore-consolidate-mariadb-env-config.md  chore-consumption-data-pruning.md  chore-dns-resilience-and-session-reuse.md  chore-model-rename-and-retention-window.md  chore-operational-hygiene.md  feature-agile-cost-forecast.md  feature-tariff-pricing-pipeline.md  feature-yearly-consumption-comparison.md
.agent-docs/research/: octopus-billing-period-api.md
.agent-docs/specs/: bugfix-consumption-timezone-and-scheduler-backoff.md  bugfix-cost-forecast-current-agreement-range.md  bugfix-rate-fetch-url-encoding.md  bugfix-weekly-yoy-incomplete-weeks.md  chore-additive-schema-sync.md  chore-consolidate-mariadb-env-config.md  chore-consumption-data-pruning.md  chore-dns-resilience-and-session-reuse.md  chore-model-rename-and-retention-window.md  chore-operational-hygiene.md  dns-resilience-and-session-reuse.md  feature-agile-cost-forecast.md  feature-cheapest-tariff-comparison.md  feature-grafana-dashboard.md  feature-tariff-pricing-pipeline.md  feature-yearly-consumption-comparison.md
.github/: dependabot.yml  reviewers.yml
.github/workflows/: auto_request_review.yml  ci-arm64.yml  ci-arm7.yml
app/: main.py  startup.py
app/_deprecated/: extract.py  influx.py
app/common/: config.py  constants.py  decorator.py  exceptions.py  http.py  logging.py  utils.py
app/data/: api.py  base.py  consumption.py  consumption_summary.py  cost_forecast.py  extract.py  influx.py  model.py  poll.py  pricing.py  time.py
app/data/influx/: client.py
app/data/mysql/: client.py  model.py  sql_models.py
app/data/octopus/: account.py  agile_predict.py  api.py  api_utils.py  consumption.py  kraken.py  model.py  product.py  rate.py  timestamps.py  transport.py
app/data/postgres/: client.py  sql_models.py
app/data/postrgres/: client.py
grafana/mariadb/: queries.md
maria-db/: docker-compose.yml  init.sql
mariadb/: init.sql
postgres/: Dockerfile  docker-compose.yml  init.sql
tests/: conftest.py  test_account_meter_information_seam.py  test_agile_forecast_persistence.py  test_agile_forecast_tiling.py  test_agile_predict_client.py  test_agreement_persistence.py  test_config_settings.py  test_consumption_endpoint_building.py  test_consumption_retrieval.py  test_consumption_seam.py  test_consumption_summarization.py  test_consumption_summary_backfill.py  test_consumption_summary_persistence.py  test_cost_forecast_persistence.py  test_cost_forecast_retriever.py  test_cost_via_join.py  test_elapsed_billing_period_costs.py  test_electricity_rate_seam.py  test_future_consumption_projection.py  test_gas_rate_seam.py  test_job_run_recording.py  test_kraken_billing_period.py  test_mariadb_upsert.py  test_octopus_meter_parsing.py  test_octopus_transport.py  test_pricing_retrieval.py  test_pricing_schema.py  test_product_catalogue_seam.py  test_product_rate_persistence.py  test_read_current_product_rate.py  test_refresh_scheduling.py  test_schema_sync.py
