[tool.poetry]
name = "octopus-monitoring"
version = "0.1.0"
description = ""
authors = ["Matt Holubinka <meholubinka@gmail.com>"]
readme = "README.md"
packages = [{include = "octopus_monitoring"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
influxdb = "^5.3.2"
cryptography = "46.0.3"
pyyaml = "^6.0.3"
influxdb-client = "^1.49.0"
sqlalchemy = "^2.0.46"
pymysql = "^1.1.2"
schedule = "^1.2.2"


[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
black = "^26.1.0"
mypy = "^1.19.1"
ruff = "^0.14.14"
pre-commit = "^4.5.1"
ipykernel = "^7.1.0"
types-requests = "^2.32.4.20260107"
types-pyyaml = "^6.0.12.20250915"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
