[project]
name = "octopus-monitoring"
version = "0.1.0"
description = ""
authors = [{name = "Matt Holubinka", email = "meholubinka@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "influxdb>=5.3.2",
    "cryptography==45.0.4",
    "pyyaml>=6.0.2",
    "influxdb-client>=1.49.0",
    "sqlalchemy>=2.0.41",
    "pymysql>=1.1.1",
    "schedule>=1.2.2",
    "pydantic>=2.13.4",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "black>=25.1.0",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
    "pre-commit>=4.2.0",
    "ipykernel>=6.29.5",
    "types-requests>=2.32.4.20250611",
    "types-pyyaml>=6.0.12.20250516",
    "sqlalchemy-stubs>=0.4",
    "pytest>=8.3.4",
    "responses>=0.25.3",
    "pytest-cov>=7.1.0",
    "pylint>=4.0.6",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.pylint.main]
ignore-paths = ["app/_deprecated"]
source-roots = ["app"]

[tool.pylint."messages control"]
# Each disable below is a deliberate fit to this codebase's established conventions,
# not a blanket suppression. Re-enable individually if the underlying convention changes.
disable = [
    # This codebase has no docstrings anywhere by design — self-documenting code,
    # comments reserved for non-obvious WHY (.agent-docs/agent.md, "Production Code Quality").
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    # Small data/config/model classes (Pydantic settings, SQLAlchemy models, dataclass-style
    # value objects) are intentionally simple and don't need >=2 public methods.
    "too-few-public-methods",
    # The retry()/API-wrapper architecture (common/decorator.py, data/octopus/api.py,
    # data/mysql/client.py) deliberately catches/raises bare Exception as its error boundary.
    "broad-exception-caught",
    "broad-exception-raised",
    # f-string logging is this codebase's consistent existing convention; the lazy-%
    # performance case pylint optimizes for doesn't apply at this app's log volume.
    "logging-fstring-interpolation",
    # TODOs are tracked via GitHub issues, not blocked by lint.
    "fixme",
    # Enum members and SQLAlchemy ORM classes intentionally use lowercase names
    # (e.g. Energy.electricity, sql_models.consumption) matching table names — an
    # established, deliberate deviation from PEP8 UPPER_CASE/PascalCase defaults.
    "invalid-name",
    # False-positive on match/case blocks whose default arm raises rather than falls
    # through; mypy already verifies the declared return type is honored on every path.
    "inconsistent-return-statements",
    # Line length is already owned by black/ruff (both configured to 88 chars);
    # pylint's own line-too-long would just re-flag under different, conflicting rules.
    "line-too-long",
    # Noisy on test files, where explicit repetition of setup/assertions aids
    # readability (BDD principle) more than a shared helper would.
    "duplicate-code",
]
